// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarStack snapshot > matches snapshot 1`] = `
<div>
  <div
    class="MuiStack-root css-k9cukr-MuiStack-root"
  >
    <div
      class="MuiStack-root css-k0vgmj-MuiStack-root"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular css-12eyj5p-MuiAvatar-root"
      >
        <img
          alt="Avatar 1"
          class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
          loading="lazy"
          src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
        />
      </div>
      <div
        class="MuiAvatar-root MuiAvatar-circular css-12eyj5p-MuiAvatar-root"
      >
        <img
          alt="Avatar 2"
          class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
          loading="lazy"
          src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xdAC17F958D2ee523a2206206994597C13D831ec7/logo.png"
        />
      </div>
      <div
        class="MuiAvatar-root MuiAvatar-circular css-12eyj5p-MuiAvatar-root"
      >
        <img
          alt="Avatar 3"
          class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
          loading="lazy"
          src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599/logo.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarStack snapshot > matches snapshot with limit 1`] = `
<div>
  <div
    class="MuiStack-root css-k9cukr-MuiStack-root"
  >
    <div
      class="MuiStack-root css-k0vgmj-MuiStack-root"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular css-12eyj5p-MuiAvatar-root"
      >
        <img
          alt="Avatar 1"
          class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
          loading="lazy"
          src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
        />
      </div>
      <div
        class="MuiAvatar-root MuiAvatar-circular css-12eyj5p-MuiAvatar-root"
      >
        <img
          alt="Avatar 2"
          class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
          loading="lazy"
          src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xdAC17F958D2ee523a2206206994597C13D831ec7/logo.png"
        />
      </div>
      <div
        class="MuiAvatar-root MuiAvatar-circular css-12eyj5p-MuiAvatar-root"
      >
        <img
          alt="Avatar 3"
          class="MuiAvatar-img css-i4dfdj-MuiAvatar-img"
          loading="lazy"
          src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599/logo.png"
        />
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-1angzm9-MuiTypography-root"
    >
      +
      2
    </p>
  </div>
</div>
`;
